final develop portfolio

--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -51,11 +51,11 @@ import { work } from "@cv"
 
   article h3 {
     font-weight: 500;
-    color: #111;
+    color: #b3c3d3;
   }
 
   article a {
-    color: #111;
+    color: #b3c3d3;
   }
 
   article a:hover {
@@ -63,7 +63,7 @@ import { work } from "@cv"
   }
 
   article h4 {
-    color: #222;
+    color: #85939e;
     font-weight: 400;
   }
 
@@ -75,7 +75,7 @@ import { work } from "@cv"
   }
 
   time {
-    color: #555;
+    color: #85939e;
     font-size: 0.85rem;
     min-width: 102px;
   }
