--- a/src/components/KeyboardManager.astro
+++ b/src/components/KeyboardManager.astro
@@ -184,9 +184,9 @@ const profilesInfo = profiles.map(({ network, url }) => {
     }
 
     #footer-button {
-      background: #fff;
+      background: #272c30;
       position: fixed;
-      border: 1px solid #eee;
+      border: 1px solid #85939e;
       right: 10px;
       bottom: 10px;
       width: 50px;
@@ -200,14 +200,15 @@ const profilesInfo = profiles.map(({ network, url }) => {
   }
 
   footer {
-    background: #fdfdfd;
-    border-top: 1px solid #eee;
+    background: #272c30;
+    border-top: 1px solid #85939e;
     position: fixed;
     bottom: 0px;
     width: 100%;
     padding-block: 8px;
     text-align: center;
     font-size: 0.85rem;
+    color: #85939e;
 
     /** Animation for vertical scroll */
     view-timeline-name: --revealing;
@@ -219,9 +220,11 @@ const profilesInfo = profiles.map(({ network, url }) => {
   }
 
   kbd {
-    background: #eee;
+    background: #272c30;
     border-radius: 4px;
     padding: 2px 4px;
     font-size: 12px;
+    border: 1px solid #85939e;
+    color: #85939e;
   }
 </style>
