--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -102,7 +102,7 @@ const printInfo = [email, phone, linkedInUrl].filter(Boolean).join(" • ")
   }
 
   h2 {
-    color: #444;
+    color: #b3c3d3;
     font-weight: 500;
     font-size: 1.1rem;
     text-wrap: balance;
@@ -116,7 +116,7 @@ const printInfo = [email, phone, linkedInUrl].filter(Boolean).join(" • ")
   }
 
   span {
-    color: #666;
+    color: #85939e;
     display: flex;
     align-items: center;
     gap: 0.25rem;
@@ -125,7 +125,6 @@ const printInfo = [email, phone, linkedInUrl].filter(Boolean).join(" • ")
   }
 
   footer {
-    color: #555;
     font-size: 0.65rem;
     display: flex;
     gap: 4px;
@@ -133,11 +132,11 @@ const printInfo = [email, phone, linkedInUrl].filter(Boolean).join(" • ")
   }
 
   footer a {
-    color: #777;
+    color: #85939e;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #eee;
+    border: 1px solid #85939e;
     padding: 4px;
     height: 32px;
     width: 32px;
@@ -146,7 +145,8 @@ const printInfo = [email, phone, linkedInUrl].filter(Boolean).join(" • ")
   }
 
   footer a:hover {
-    background: #eee;
+    background: #85939e;
     border: 1px solid #ddd;
+    color: #ddd;
   }
 </style>
