--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -1,4 +1,5 @@
 ---
+import GitHub from "@/icons/Github.astro"
 import Section from "../Section.astro"
 
 import { projects } from "@cv"
@@ -7,30 +8,39 @@ import { projects } from "@cv"
 <Section title="Projects">
   <ul>
     {
-      projects.map(({ url, description, highlights, name, isActive }) => {
-        return (
-          <li>
-            <article>
-              <header>
-                <h3>
-                  <a href={url} title={`Ver el proyecto ${name}`}>
-                    {name}
-                  </a>
-                  {
-                    isActive && <span>&bull;</span>
-                  }
-                </h3>
-                <p>{description}</p>
-              </header>
-              <footer>
-                {highlights.map((highlight) => (
-                  <span>{highlight}</span>
-                ))}
-              </footer>
-            </article>
-          </li>
-        )
-      })
+      projects.map(
+        ({ url, description, highlights, name, isActive, github }) => {
+          return (
+            <li>
+              <article>
+                <header>
+                  <h3>
+                    <a href={url} title={`Ver el proyecto ${name}`}>
+                      {name}
+                    </a>
+                    {isActive && <span>&bull;</span>}
+                    {github && (
+                      <a
+                        class="github-code-link"
+                        href={github}
+                        target="_blank"
+                        title={`Ver código fuente del proyecto ${name}`}>
+                        <GitHub />
+                      </a>
+                    )}
+                  </h3>
+                  <p>{description}</p>
+                </header>
+                <footer>
+                  {highlights.map((highlight) => (
+                    <span>{highlight}</span>
+                  ))}
+                </footer>
+              </article>
+            </li>
+          )
+        }
+      )
     }
   </ul>
 </Section>
@@ -44,7 +54,7 @@ import { projects } from "@cv"
 
   article {
     border-radius: 8px;
-    border: 1px solid #f2f2f2;
+    border: 1px solid #85939e;
     gap: 16px;
     display: flex;
     flex-direction: column;
@@ -57,7 +67,7 @@ import { projects } from "@cv"
   }
 
   article header h3 a {
-    color: #111;
+    color: #b3c3d3;
   }
 
   article header h3 a:hover {
@@ -83,10 +93,27 @@ import { projects } from "@cv"
 
   article footer span {
     border-radius: 6px;
-    background: #eee;
-    color: #444;
+    background: #272c30;
+    border: 1px solid #85939e;
+    color: #85939e;
     font-size: 0.6rem;
     font-weight: 500;
     padding: 0.2rem 0.6rem;
+  }
+
+  .github-code-link {
+    margin-left: 5px;
+  }
+
+  @media (width <= 700px) {
+    ul {
+      margin-inline: 0px;
+    }
+
+    article {
+      border: none;
+      box-shadow: 0 1px 1px #f2f2f2;
+      padding: 0 0 16px 0;
+    }
   }
 </style>
