--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -1,17 +1,45 @@
 ---
 import Section from "../Section.astro"
-
+import Angular from "@/icons/angular.astro"
+import HTML from "@/icons/html.astro"
+import CSS from "@/icons/css.astro"
+import JavaScript from "@/icons/javascript.astro"
+import TypeScript from "@/icons/type.astro"
+import React from "@/icons/react.astro"
+import Node from "@/icons/node.astro"
+import MySQL from "@/icons/sql.astro"
+import Git from "@/icons/git.astro"
+import GitHub from "@/icons/Github.astro"
+import Tailwind from "@/icons/tailwind.astro"
 import { skills } from "@cv"
+
+const SKILLS_ICONS: Record<string, any> = {
+  Angular,
+  HTML,
+  CSS,
+  JavaScript,
+  TypeScript,
+  React,
+  Node,
+  MySQL,
+  Git,
+  GitHub,
+  Tailwind,
+}
 ---
 
-<Section title="Skills">
+<Section title="Habilidades">
   <ul>
     {
-      skills.map(({ name }) => (
-        <li>
-          <span>{name}</span>
-        </li>
-      ))
+      skills.map(({ name }) => {
+        const Icon = SKILLS_ICONS[name]
+
+        return (
+          <li>
+            {Icon && <Icon />} <span>{name}</span>
+          </li>
+        )
+      })
     }
   </ul>
 </Section>
@@ -20,12 +48,17 @@ import { skills } from "@cv"
   ul {
     display: inline-flex;
     gap: 8px;
+    flex-wrap: wrap;
   }
 
   li {
+    display: flex;
+    gap: 4px;
+    align-items: center;
     border-radius: 6px;
-    background: #eee;
-    color: black;
+    background: #272c30;
+    border: 1px solid #85939e;
+    color: #85939e;
     font-size: 0.8rem;
     font-weight: 500;
     padding: 0.2rem 0.6rem;
