--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const { title } = Astro.props
       "Courier New",
       Courier,
       monospace;
-    background: #fff;
+    background: #272c30;
     letter-spacing: -0.025rem;
   }
 
@@ -73,10 +73,11 @@ const { title } = Astro.props
       "Open Sans",
       "Helvetica Neue",
       sans-serif;
+    color: #fff;
   }
 
   p {
-    color: #666;
+    color: #bec5cb;
     font-size: 0.9rem;
     line-height: 1.5;
     margin: 0;
