--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -15,7 +15,10 @@ import { projects } from "@cv"
               <article>
                 <header>
                   <h3>
-                    <a href={url} title={`Ver el proyecto ${name}`}>
+                    <a
+                      href={url}
+                      title={`Ver el proyecto ${name}`}
+                      target="_blank">
                       {name}
                     </a>
                     {isActive && <span>&bull;</span>}
