--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -149,4 +149,31 @@ const printInfo = [email, phone, linkedInUrl].filter(Boolean).join(" • ")
     border: 1px solid #ddd;
     color: #ddd;
   }
+
+  @media (width <= 700px) {
+    .container {
+      flex-direction: column-reverse;
+    }
+
+    .info {
+      justify-content: center;
+      align-items: center;
+      padding-right: 0;
+      text-align: center;
+    }
+
+    figure {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    h2 {
+      text-wrap: balance;
+    }
+
+    figure {
+      margin: 0 auto;
+    }
+  }
 </style>
