--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -112,11 +112,11 @@ import { projects } from "@cv"
     ul {
       margin-inline: 0px;
     }
+  }
 
-    article {
-      border: none;
-      box-shadow: 0 1px 1px #f2f2f2;
-      padding: 0 0 16px 0;
+  @media print {
+    article h3 span {
+      animation-name: none;
     }
   }
 </style>
