feat: add new skill and new project

--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -11,6 +11,7 @@ import MySQL from "@/icons/sql.astro"
 import Git from "@/icons/git.astro"
 import GitHub from "@/icons/Github.astro"
 import Tailwind from "@/icons/tailwind.astro"
+import Lit from "@/icons/lit.astro"
 import { skills } from "@cv"
 
 const SKILLS_ICONS: Record<string, any> = {
@@ -25,6 +26,7 @@ const SKILLS_ICONS: Record<string, any> = {
   Git,
   GitHub,
   Tailwind,
+  Lit,
 }
 ---
 
